сливаем вместе коммиты и дописываем хрень

--- a/src/test.html
+++ b/src/test.html
@@ -5,6 +5,7 @@
 <head>Очередные правки</head>
 fsdagsdfg
 asdfgafg
+тут строку добавляем и скомичиваем
 
 <h1>Тут потом еще добавили</h1>
 <head> тут внесли изменени</head>
