change text test.html, scripts.js and style.css master

--- a/src/test.html
+++ b/src/test.html
@@ -9,5 +9,7 @@ asdfgafg
 <h1>Тут потом еще добавили</h1>
 <head> тут внесли изменени</head>
 
+//добавили текст в ветке мастер!!!
+
 </html>
 // комент
